// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render a Tabs component 1`] = `
<ul
  class="tabs"
>
  <li
    class="tab"
  >
    <button
      title="Tab 1"
    >
      Tab 1
    </button>
  </li>
  <li
    class="tab"
  >
    <button
      title="Tab 2"
    >
      Tab 2
    </button>
  </li>
  <li
    class="tab"
  >
    <button
      title="Tab 3"
    >
      Tab 3
    </button>
  </li>
</ul>
`;

exports[`Render a Tabs component with a selected tab 1`] = `
<ul
  class="tabs"
>
  <li
    class="tab selected"
  >
    <button
      disabled=""
      title="Tab 1"
    >
      Tab 1
    </button>
  </li>
  <li
    class="tab"
  >
    <button
      title="Tab 2"
    >
      Tab 2
    </button>
  </li>
  <li
    class="tab"
  >
    <button
      title="Tab 3"
    >
      Tab 3
    </button>
  </li>
</ul>
`;
